--- a/light-modules/react-minimal-lm/templates/pages/basic.yaml
+++ b/light-modules/react-minimal-lm/templates/pages/basic.yaml
@@ -1,6 +1,6 @@
 title: 'React: Basic'
 
-baseUrl: http://localhost:3000
+baseUrl: https://golden-creponne-fef84d.netlify.app/
 routeTemplate: '/{language}{{@path}}'
 
 dialog: spa-lm:pages/basic
